# zssk-ticket-automation

./: .gitignore  README.md  pyproject.toml  zssk
src/: main.py  scraper.py
src/zssk_ticket_automation/: main.py  scraper.py
