[project]
name = "zssk-ticket-automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "playwright>=1.54.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-playwright>=0.7.0",
]

[tool.uv]
package = true

